# e-commerce

backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/api/v1/endpoints/: auth.py  product.py  user.py
backend/app/core/: config.py  container.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
backend/app/core/enums/: user_role.py
backend/app/helpers/: password_checker.py
backend/app/models/: __init__.py  base_model.py  category.py  product.py  user.py
backend/app/repositories/: base_repository.py
backend/app/schemas/: auth_schema.py  base_schema.py  user_schema.py
backend/app/services/: auth_service.py  base_service.py  user_service.py
backend/app/utils/: query_builder.py
backend/migrations/: env.py
backend/migrations/versions/: 56a4711deee1_initial.py
backend/plugins/: logging.py
backend/tmp/postgres/data/base/1/: pg_internal.init
backend/tmp/postgres/data/base/16384/: 1247  1249  1259  16387  16390  16397  16403  16405  16406  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  3501  3502  3503  3534  pg_internal.init
backend/tmp/postgres/data/base/5/: pg_internal.init
backend/tmp/postgres/data/global/: 1260  1262  2671  pg_control  pg_internal.init
backend/tmp/postgres/data/pg_stat/: pgstat.stat
frontend/admin/: package-lock.json  package.json  vite.config.ts
frontend/store/: next.config.ts  package-lock.json  package.json  proxy.ts
(+104 files in other folders)
